--- a/index.html
+++ b/index.html
@@ -4,9 +4,40 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AulaCss</title>
+    <title>Aula Css</title>
 </head>
+<style>
+    *{
+        overflow: hidden;
+        margin: 0;
+    }
+    .fundo{
+        width: 100vw;
+        height: 100vh;
+        background-image: linear-gradient(to bottom right, rgb(217, 12, 236), rgb(25, 44, 218));
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+    }
+    .amarela{
+        width: 400px;
+        height: 400px;
+        background-color: aliceblue;
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+        border-style: solid;
+        border-color: black;
+        border-radius: 30px;
+    }
+</style>
 <body>
-    
+   <div class="fundo">
+        <div class="amarela">
+        </div>
+   </div>
 </body>
 </html>
