--- a/index.html
+++ b/index.html
@@ -14,29 +14,40 @@
     .fundo{
         width: 100vw;
         height: 100vh;
-        background-image: linear-gradient(to bottom right, rgb(217, 12, 236), rgb(25, 44, 218));
+        background-image: linear-gradient(to bottom right, rgb(8, 8, 8), rgb(68, 75, 145));
         display: flex;
         flex-direction: row;
-        justify-content: center;
+        justify-content: space-around;
+        justify-items: center;
         align-items: center;
+        align-content: center;
     }
-    .amarela{
-        width: 400px;
-        height: 400px;
-        background-color: aliceblue;
+    .roxa{
+        width: 200px;
+        height: 200px;
+        background-color: rgb(127, 13, 235);
         display: flex;
         align-items: center;
+        align-content: center;
         flex-direction: column;
-        justify-content: space-between;
-        align-items: center;
+        justify-content: center;
         border-style: solid;
         border-color: black;
-        border-radius: 30px;
+        border-radius: 100px;
+        text-align: center;
+        font-size: 20px;
+        font-family: "Audiowide", sans-serif;
+        color:white;
     }
 </style>
 <body>
    <div class="fundo">
-        <div class="amarela">
+        <div class="roxa">
+        PRIMEIRA BOLOTA
+        </div>
+
+        <div class="roxa">
+            SEGUNDA BOLOTA
         </div>
    </div>
 </body>
