--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
     background-color: #060494;
   }
   50% {
-    background-color: #c826dd;
+    background-color: #0c8d1d;
   }
   100% {
-    background-color: #560797;
+    background-color: #070997;
   }
 }
     .roxa{
