--- a/index.html
+++ b/index.html
@@ -48,17 +48,20 @@
         font-size: 20px;
         font-family: "Audiowide", sans-serif;
         color:white;
-        animation: changeBackgroundColor 7s infinite;
+        animation: changeBackgroundColor2 6s infinite;
     }
-    @keyframes changeBackgroundColor {
+    @keyframes changeBackgroundColor2 {
   0% {
     background-color: #e20606;
   }
-  50% {
+  25% {
     background-color: #ff960d;
   }
-  100% {
+  50% {
     background-color: #e3e656;
+  }
+  100% {
+    background-color: #eb0909;
   }
 }
 </style>
